# DesktopIconCenter

./: .gitignore  CMakeLists.txt  DesktopIconCenter.md  DesktopIconCenter.sln  DesktopIconCenter.vcxproj  README.md  build-windows.yml  config.ini
.github/workflows/: build-windows.yml
include/: App.h  Config.h  Desktop360Compat.h  DesktopListView.h  DesktopWatcher.h  ExplorerDesktop.h  GridManager.h  IconManager.h  Logger.h  TrayIcon.h  Version.h
resource/: resource.h  resource.rc
src/: App.cpp  Config.cpp  Desktop360Compat.cpp  DesktopListView.cpp  DesktopWatcher.cpp  ExplorerDesktop.cpp  GridManager.cpp  IconManager.cpp  Logger.cpp  TrayIcon.cpp  main.cpp
